[package]
name = "github-blogger"
version = "1.0.0"
description = "A blogging website powered by GitHub"
authors = []
license = ""
repository = ""
default-run = "github-blogger"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "github_blogger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "github-blogger"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
quick-xml = { version = "0.31", features = ["serialize"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
anyhow = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
